# ANN

./: .gitignore  ANN.sln  CMakeLists.txt  Makefile  README.md
ANN/: ANN.c  ANN.h  ANN.vcxproj  ANN.vcxproj.filters  ANN_test.c  Main.c  Structures.h
